Update and rename login.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         	Login
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="login.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
     	<div id="logo">
